--- a/html/resumen.html
+++ b/html/resumen.html
@@ -1,3 +1,3 @@
-<h1>Sistema de Informaci&oacute;n Geogr&aacute;fica para la evaluaci&oacute;n de la grado de sustentabilidad de las pr&aacute;cticas agropecuarias del municipio Marqu&eacute;s de Comillas, Chiapas<h1>
+<h1>Mapa interactivo de la correlación entre las prácticas agropecuarias y los cambios de masa forestal en el municipio de Marqu&eacute;s de Comillas, Chiapas<h1>
 
 <h3>Iskar Waluyo, Julio Garc&iacute;a, Agust&iacute;n Bolom</h3>
