--- a/html/resumen.html
+++ b/html/resumen.html
@@ -6,11 +6,25 @@
 
 <body>
 <h1>Mapa interactivo web de la correlación entre los cambios en la superficie forestal y la actividad agropecuaria en el municipio de Marqués de Comillas, Chiapas</h1>
-<p>La incorporación de los temas ambientales al interior de los países miembros de la ONU influyó trascendentalmente en América Latina. Particularmente en México, se dio pie a que en 1994 se comenzara a construir una institucionalidad ambiental alrededor de la Secretaría de Medio Ambiente, Recursos Naturales y Pesca (SEMARNAP). Además, el país ya contaba con un antecedente de acciones que impulsaron el deterioro de su patrimonio natural. Una reconfiguración política y social estableció el enfoque bajo el cual, desde el seno del Estado mexicano, se impulsaría el manejo de la tierra y sus recursos naturales que consideró a todos aquellos espacios con vegetación natural como ociosos al grado de crear una Ley de Tierras Ociosas (1920) e incluso un Programa Nacional de Desmontes en 1973. Se generaron programas orientados a la producción agropecuaria con el objetivo de convertirlas un motor de desarrollo para el país pero con detrimento de la vegetación natural que adoptaron prácticas de la Revolución Verde como el Plan Chontalpa y Tenosique-Balancan en Tabasco (Anta & Carabias et al. 2008).</p>
 
-</p>La gestión de programas como los anteriormente expuestos requiere de herramientas que permitan la caracterización de los fenómenos que ocurren y hagan posible la interlocución de los actores involucrados. Este proyecto es un prototipo de mapa interactivo web que permite la visualización de los cambios de la masa forestal y la actividad agropecuaria en el municipio Marqués de Comillas, Chiapas. Algunos ejemplos de este tipo de soluciones permiten visualizar cartografía digital como; “Mapa Digital” del Instituto Nacional de Estadística y Geografía (INEGI), el “Portal de Geoinformación” de la Comisión Nacional para Uso y Conocimiento de la Biodiverisdad (CONABIO) y el Sistema de Alerta Temprana de Incendios (SATI), etc. </p>
+<h2>Resumen</h>
 
-<p/>El Sistema Nacional para la Consulta de Activos Concurrentes (SINACIC) permite la intersección de la cartografía digital de la SADER Y SEMARNAT para determinar a que subsidio de las Reglas de Operación SADER es candidato un determinado predio (CONABIO 2019). Estas herramientas cuentan con una interfaz intuitiva en donde se presenta el resultado del análisis espacial por intersección de forma muy intuitiva para el usuario.  La posibilidad de realizar algunos análisis sencillos mediante la superposición de capas y la aplicación de transparencias son características a las cuales apela este proyecto.</p>
+<h3>Mapa interactivo</h3>
+
+<h3>Funcionalidades</h3>
+
+<dl>
+  <dt>Funcionalidad 1: Visualización de indicadores de cambios de superfice forestal y actividad agropecuaria</dt>
+  <dd>La primera y principal funcionalidad del mapa es poder visualizar en capas distintos indicadores de cambios en la superfice forestal y la actividad agropecuaria. </dd>
+  <dd>Indicadores de superficie forestal</dd>
+      <ol>
+        <li>Cambios en los usos de suelo estimados con las series III y VI del INEGI.</li>
+        <li>Cambios en la superfice con cobertura con vegetación (primaria y secundaria) con las series III y VI del INEGI.</li>
+        <li>Autocorrelación espacial univariada de los cambios de la superfice con cobertura (primaria y secundiara)</li>
+      </ol>
+  <dt>Funcionalidad 2: Consulta de los datos de origen y los datos reusltado del análisis</dt>
+  <dd>- white cold drink</dd>
+</dl>
 
 <!--begin.rcode
 summary(cars)
