--- a/html/resumen.html
+++ b/html/resumen.html
@@ -14,16 +14,44 @@
 <h3>Funcionalidades</h3>
 
 <dl>
-  <dt>Funcionalidad 1: Visualización de indicadores de cambios de superfice forestal y actividad agropecuaria</dt>
+  <dt>Funcionalidad 1: Visualización de indicadores</dt>
   <dd>La primera y principal funcionalidad del mapa es poder visualizar en capas distintos indicadores de cambios en la superfice forestal y la actividad agropecuaria. </dd>
-  <dd>Indicadores de superficie forestal</dd>
+  <dd><b>Indicadores de superficie forestal</b></dd>
       <ol>
         <li>Cambios en los usos de suelo estimados con las series III y VI del INEGI.</li>
         <li>Cambios en la superfice con cobertura con vegetación (primaria y secundaria) con las series III y VI del INEGI.</li>
         <li>Autocorrelación espacial univariada de los cambios de la superfice con cobertura (primaria y secundiara)</li>
       </ol>
-  <dt>Funcionalidad 2: Consulta de los datos de origen y los datos reusltado del análisis</dt>
-  <dd>- white cold drink</dd>
+
+  <dd><b>Indicadores de la actividad agropecuaria</b></dd>
+      <ol>
+        <li>Porcentaje de terrenos con actividad agrícola</li>
+        <li>Porcentaje de terrenos con actividad pecuaria</li>
+        <li>Porcentaje de terrenos con actividad pecuaria</li>
+        <li>Cambios en superficie sembrada entre el 2007 y 2016</li>
+        <li>Número de terrenos y tamaño promedio de terrenos</li>
+      </ol>
+
+  <dt>Funcionalidad 2: Consulta de datos</dt>
+  <dd>La segunda funcionalidad permite consultar y descargar los datos utilizados y los datos que se generaron</dd>
+  <dd><b>Grupos de datos disponibles</b></dd>
+      <ol>
+        <li>Datos de actividad agropecuaria 2007 en el estado de Chiapas</li>
+        <li>Datos de actividad agropecuaria 2016 en el estado de Chiapas</li>
+        <li>Comparativo de los datos en el estado de Chiapas</li>
+        <li>Datos de la Serie III y Serie VI de cambios de uso de suelo en el estado de Chiapas</li>
+        <li>Cambios de uso de suelo del en el municipio de Marqués de Comillas</li>
+        <li>Matriz de los indicadores estimados durante el análisis</li>
+      </ol>
+
+    <dt>Funcionalidad 3: Comparación de los indicadores</dt>
+    <dd>La última funcionalidad permite generar gráficas de dispersión que relacionen los indicadores de cambios en la superficie forestal y la actividad agropecuaria. </dd>
+    <dd><b>Comparativos</b></dd>
+       <ol>
+          <li>Gráfica de distribución.</li>
+          <li>Matriz de correlación de Pearson de las combinaciones de los indicadores.</li>
+        </ol>
+
 </dl>
 
 <!--begin.rcode
