--- a/html/acerca_de.html
+++ b/html/acerca_de.html
@@ -1,33 +1,9 @@
-<p>Éste sitio fue elaborado como proyecto de titulación de la Especialidad en Geomática en el Centro de
-El objetivo del sitio es correlacionar las actividades agropecuarias con los cambios de masa forestal en el municipio de Marqués de Comillas, Chiapas. </p>
+<p>Este sitio fue elaborado como proyecto de titulación de la Especialidad en Geomática en el Centro de Investigación en Ciencias de Información Geoespacial con datos de acceso abierto del INEGI.</p>
 
-<p>En el sitio es posible visualizar 6 capas:</p>
+<p>El código esta disponible en: <a href = "https://github.com/iskarwaluyo/mapa_agricultura_masaforestal"> https://github.com/iskarwaluyo/mapa_agricultura_masaforestal </a></p>
+<a href="url">link text</a>
 
-<ol>
-  <li>Porcentaje de terrenos utilizados para la actividad agrícola durante el 2016</li>
-  <li>Porcentaje de terrenos utilizados para la actividad pecuaria durante el 2016</li>
-  <li>Porcentaje de terrenos utilizados para la actividad forestal durante el 2016</li>
-  <li> Capa de información general sobre el área de control (tamaño promedio de parcela, superficie sembrada, cultivo principal, distribución del tipo de uso)</li>
-  <li>Cambio de cantidad de superficie con cobertura vegetal del (2000 al 2016) elaborado con datos de la serie III y serie IV</li>
-  <li>Cambio de la cantidad de superficie con cobertura vegetal del (2000 al 20016) elaborado con un análisis de cambios de de NDVI</li>
-  <li>Autocorrelación espacial del cambio</li>
-</ol>
-
-<h3>Contexto</h3>
-
-Marqués de Comillas es un municipio de
-
-<h3>Datos</h3>
-Fuentes de los datos agropecuarios:
-Fuentes de las imágenes satelitales utilizadas:
-Fuentes de los datos de los cambios:
-<h3>Código</h3>
-Se utilizó R, HTML, Javascript y CSS principalmente para la elaboración de este mapa interactivo.
-Se utilizaron las siguientes librerías de R:
 <h3>Autores</h3>
-Iskar Waluyo Moreno
-Agustín Bolom Gomez
-Julio García Sampayo
-
-<h3>Contacto</h3>
-iwaluyo@centrogeo.edu.mx
+Iskar Waluyo Moreno iwaluyo@centrogeo.edu.mx
+Agustín Bolom Gomez abolom@centrogeo.edu.mx
+Julio García Sampayo jcgarcia@centrogeo.edu.mx
