--- a/html/introduccion.html
+++ b/html/introduccion.html
@@ -7,20 +7,33 @@
 <body>
 
 <h2>Introducción</h2>
-  <p>La incorporación de los temas ambientales al interior de los países miembros de la ONU influyó trascendentalmente en América Latina. Particularmente en México, se dio pie a que en 1994 se comenzara a construir una institucionalidad ambiental alrededor de la Secretaría de Medio Ambiente, Recursos Naturales y Pesca (SEMARNAP). Además, el país ya contaba con un antecedente de acciones que impulsaron el deterioro de su patrimonio natural. Una reconfiguración política y social estableció el enfoque bajo el cual, desde el seno del Estado mexicano, se impulsaría el manejo de la tierra y sus recursos naturales que consideró a todos aquellos espacios con vegetación natural como ociosos al grado de crear una Ley de Tierras Ociosas (1920) e incluso un Programa Nacional de Desmontes en 1973. Se generaron programas orientados a la producción agropecuaria con el objetivo de convertirlas un motor de desarrollo para el país pero con detrimento de la vegetación natural que adoptaron prácticas de la Revolución Verde como el Plan Chontalpa y Tenosique-Balancan en Tabasco (Anta & Carabias et al. 2008).</p>
+  <p>Pese a la implementación de distintos proyectos orientados a maximizar la producción en el país, como Sembrando Vida, actualmente México presenta una alta dependencia alimentaria, la población rural presenta las peores condiciones de rezago socioeconómico y se enfrenta además al deterioro de su patrimonio natural, el cual es su principal medio de producción. Por otro lado, la visión agropecuaria del campo mexicano sigue presente a pesar de que, por ejemplo, se considera que 70% de la superficie del país es de carácter forestal, lo cual ha generado una dinámica conflictiva entre actividades agropecuarias y ambientales en el campo (CONABIO 2019).
+</p>
 
-  </p>La gestión de programas como los anteriormente expuestos requiere de herramientas que permitan la caracterización de los fenómenos que ocurren y hagan posible la interlocución de los actores involucrados. Este proyecto es un prototipo de mapa interactivo web que permite la visualización de los cambios de la masa forestal y la actividad agropecuaria en el municipio Marqués de Comillas, Chiapas. Algunos ejemplos de este tipo de soluciones permiten visualizar cartografía digital como; “Mapa Digital” del Instituto Nacional de Estadística y Geografía (INEGI), el “Portal de Geoinformación” de la Comisión Nacional para Uso y Conocimiento de la Biodiverisdad (CONABIO) y el Sistema de Alerta Temprana de Incendios (SATI), etc. </p>
+  </p>Las actividades productivas y de conservación se desenvuelven en el mismo espacio físico y es ahí en donde surgen conflictos debido a acciones contradictorias impulsadas por instituciones dedicadas al sector productivo y al ambiental, ante tal situación se ha hecho énfasis, desde la academia y sociedad civil organizada principalmente, en la necesidad de la transversalidad de las políticas productivas y ambientales para impulsar la productividad sin deteriorar el patrimonio natural que la sustenta (CONABIO 2019). Para tal fin es necesario la creación de distintos espacios de diálogo entre los sectores involucrados, autoridades y productores, así como una planificación que permita la integración de la conservación y la producción del campo.
+</p>
 
-  <p/>El Sistema Nacional para la Consulta de Activos Concurrentes (SINACIC) permite la intersección de la cartografía digital de la SADER Y SEMARNAT para determinar a que subsidio de las Reglas de Operación SADER es candidato un determinado predio (CONABIO 2019). Estas herramientas cuentan con una interfaz intuitiva en donde se presenta el resultado del análisis espacial por intersección de forma muy intuitiva para el usuario.  La posibilidad de realizar algunos análisis sencillos mediante la superposición de capas y la aplicación de transparencias son características a las cuales apela este proyecto.</p>
-<!--begin.rcode
-summary(cars)
-end.rcode-->
+  <p/>La planificación del territorio necesita de herramientas que permitan la caracterización y análisis de los fenómenos que ocurren y además hagan posible la interlocución de los distintos actores involucrados. Es por eso que para este proyecto se desarrolló el prototipo de una herramienta web que permite la visualización de la caracterización espacial de la dinámica forestal (pérdida-ganancia de superficie forestal) y la actividad agropecuaria, así como su relación espacial, en el municipio Marqués de Comillas en el estado de Chiapas, zona de suma importancia por su biodiversidad y dinámica productiva.
+</p>
 
-<p>You can also embed plots, for example:</p>
 
-<!--begin.rcode fig.width=7, fig.height=6
-plot(cars)
-end.rcode-->
+<h2>Justificación</h2>
+
+<p>La deforestación impulsada por las actividades agropecuarias es un problema que en México se ve fuertemente impulsada por políticas públicas contradictorias que por un lado fomentan acciones de conservación y, por otro, actividades productivas sobre ecosistemas forestales; este fenómeno pone en riesgo al patrimonio natural del país y además a la capacidad productiva del mismo. Ante ello, es necesario fortalecer las distintas acciones que se han emprendido para la integración de los sectores ambiental y productivo para armonizar las prácticas de ambos en el campo mexicano.</p>
+
+<p>Es por eso que el proyecto que se presenta es un mapa interactivo web que tiene como propósito proporcionar información contextual sobre 1) las prácticas agropecuarias y 2) los cambios en la superficie forestal. A pesar de que la plataforma está dirigida al público en general, se espera que sea un prototipo funcional de una herramienta que permita una mejor toma de decisiones para la implementación de programas que apoyan el campo como el actual Sembrando Vida y que se pueda ampliar a las distintas zonas donde se tiene contemplado implementar el programa. Idóneamente, la información que se puede visualizar en el mapa interactivo deberá contribuir a una mejor planeación y diseño no solo del programa Sembrando Vida sino de otros programas que impulsen el desarrollo rural del país.
+</p>
+
+<h2>Objetivos</h2>
+
+<p><b>Objetivo general:</b> Desarrollar un mapa interactivo web que permita visualizar la correlación entre las actividades agropecuarias y los cambios de superficie forestal en el municipio de Marqués de Comillas, Chiapas.</p>
+<b>Objetivos específicos:</b>
+<ol>
+<li>Caracterizar la actividad agrícola, pecuaria y forestal en el municipio Marqués de Comillas</li>
+<li>Calcular los cambios de la superficie forestal en el municipio Marqués de Comillas</li>
+<li>Caracterizar espacialmente mediante la autocorrelación espacial la dinámica de la superficie forestal en Marqués de comillas</li>
+<li>Desarrollar una plataforma web que permita visualizar la caracterización realizada de Marqués de Comillas</li>
+
 
 </body>
 </html>
